--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -10,40 +10,48 @@
   <!-- a section is going to be used to give the white background around the bodies background-->
   <section class="desktop-background">
     <!-- A header is used for the home name -->
-    <header class="">
-      <h4 class="header-Title-Text">Home/Grades&amp;Reporting</h4>
-      <!--Javascript date will go below-->
-      <ul class="date-Log-Out">
-      <li class="header-Date-Text">Date</li>
-      <li class="header-Date-Text">Log Out?</li>
-      </ul>
-      <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
-      <div class="page-Breaks"></div>
-    </header>
-    <!-- This section consists of the hero content used on every other document -->
-    <section class="hero-Content">
-      <!-- Each div is used to contain the headings as they need to be side by side of eachother in a non listed form. -->
-      <div class="current-Program">
-        <h4 class="content-Title-Text">Current Program:</h4>
-        <h1 class="content-Subtitle-Text">Computer Software Engineering Technology></h1>
+
+  <header class="body-Header">
+
+    <h4 class="header-Title-Text">Home</h4>
+    <!-- The empty h4 is for the current date through javascript.-->
+    <ul class="date-Log-Out">
+    <li class="header-Date-Text">Date</li>
+    <li class="header-Log-Out-Text">Log Out?</li>
+    </ul>
+    <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
+    <div class="page-Breaks top-Break"></div>
+  </header>
+  <!-- This section consists of the hero content used on every other document -->
+  <section class="hero-Content">
+    <!-- Each div is used to contain the headings as they need to be side by side of eachother in a non listed form. -->
+    <div class="current-Program">
+      <h4 class="content-Title-Text">CURRENT PROGRAM:</h4>
+      <h1 class="content-Subtitle-Text">Computer Software Engineering Technology</h1>
+    </div>
+    <div class="current-Semester">
+      <h4 class="hero-Title-Text">Current Semester:</h4>
+      <h1 class="content-Subtitle-Text">Fall 2017</h1>
+    </div>
+    <div class="enrolled-Credit-Hours">
+      <h4 class="hero-Title-Text">Enrolled Credit Hours:</h4>
+      <h1 class="content-Subtitle-Text">15</h1>
+    </div>
+    <div class="academic-Standing">
+      <h4 class="hero-Title-Text">Academic Standing</h4>
+      <h1 class="content-Subtitle-Text">Good</h1>
+    </div>
+    <div class="page-Breaks second-Break"></div>
+  </section>
+  <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
+
+    <section class="aside">
+      <div class="circle">
+        <div><img class="picture" src="images/profile-avatar.jpg"></div>
       </div>
-      <div class="current-Semester">
-        <h4 class="content-Title-Text">Current Semester:</h4>
-        <h1 class="content-Subtitle-Text">Fall 2017</h1>
-      </div>
-      <div class="enrolled-Credit-Hours">
-        <h4 class="content-Title-Text">Enrolled Credit Hours:</h4>
-        <h1 class="content-Subtitle-Text">15</h1>
-      </div>
-      <div class="academic-Standing">
-        <h4 class="content-Title-Text">Academic Standing</h4>
-        <h1 class="content-Subtitle-Text">Good</h1>
-      </div>
-      <div class="page-Breaks"></div>
-    </section>
-    <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
-    <aside class="aside">
+
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
+      <div class="aside-List">
       <h5 class="aside-Titles">Academic Services</h5>
       <ul>
         <li class="aside-Options">Current Schedule</li>
@@ -56,7 +64,8 @@
         <li class="aside-Options">Financial Aid</li>
         <li class="aside-Options">Student Services</li>
       </ul>
-    </aside>
+    </div>
+    </section>
 
     <section class="scrolling-Content">
       <!-- This section consists of the course information -->
