moved around content

--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
         </div>
         <!-- The h4 classes seperate each of the sections making it easier to make them side by side in css-->
 
-          <div class="page-Breaks"></div>
+          <div class="upcoming-Due-Dates">
         <h4 class="content-Title-Text">Upcoming Due Dates:</h4>
-        <div class="upcoming-Due-Dates">
           <h4 class="content-Title-Text">11/15</h4>
           <h1 class="content-Subtitle-Text">Web Development I: JavaScript Fundamentals Test</h1>
           <h4 class="content-Title-Text">12/15</h4>
           <h1 class="content-Subtitle-Text">Software Project I: Final Project due by 11:55pm EST</h1>
         </div>
-        <div class="page-break"></div>
+        <div class="page-break third-Break"></div>
+
         <!-- College announcements focuses on the left side content after the page break. each side after the page break are sperated by divs. -->
         <h4 class="content-Title-Text">College Announcements</h4>
         <div class="college-Announcements">
