Added Academic Dashboard and fixed a minor spelling error

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <div class="aside-List">
       <h5 class="aside-Titles">Academic Services</h5>
       <ul>
+        <li class="aside-Options">Academic Dashboard</li>
         <li class="aside-Options">Current Schedule</li>
         <li class="aside-Options">Grades &amp; Reporting</li>
         <li class="aside-Options">Upcoming Courses</li>
@@ -105,7 +106,7 @@
           <h4 class="content-Title-Text">11/15, 9:00pm</h4>
           <h1 class="content-Subtitle-Text">Movie Night</h1>
           <h4 class="content-Title-Text">11/16, 8:00am</h4>
-          <h1 class="content-Subtitle-Text">Coffee Talkp</h1>
+          <h1 class="content-Subtitle-Text">Coffee Talk</h1>
           <h4 class="content-Title-Text">11/16, 7:00pm</h4>
           <h1 class="content-Subtitle-Text">Intermural Dodgeball</h1>
           <h4 class="content-Title-Text">11/16, 9:00pm</h4>
