Added Academic Dashboard to existing asides

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -43,6 +43,7 @@
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
       <h5 class="aside-Titles">Academic Services</h5>
       <ul>
+        <li class="aside-Options">Academic Dashboard</li>
         <li class="aside-Options">Current Schedule</li>
         <li class="aside-Options">Grades &amp; Reporting</li>
         <li class="aside-Options">Upcoming Courses</li>
