Finished working on the font types for the grades & reportings.

--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -5,6 +5,7 @@
   <title>Grades&amp;Reporting</title>
 <link rel="stylesheet" type="text/css" href="../style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
 </head>
 <body>
   <!-- a section is going to be used to give the white background around the bodies background-->
@@ -99,7 +100,7 @@
           <div class="grades-Background">
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
-                <h1 class="grade-Complete">40%</h1>
+                <h1 class="grades-Complete-Text">40%</h1>
                 <p class="grades-Dates-Text"> of class completed</p>
               </div>
             </div>
@@ -120,7 +121,7 @@
           <div class="grades-Background">
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
-                <h1 class="grade-Complete">40%</h1>
+                <h1 class="grades-Complete-Text">40%</h1>
                 <p class="grades-Dates-Text"> of class completed</p>
               </div>
             </div>
@@ -141,7 +142,7 @@
           <div class="grades-Background">
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
-                <h1 class="grade-Complete">40%</h1>
+                <h1 class="grades-Complete-Text">40%</h1>
                 <p class="grades-Dates-Text"> of class completed</p>
               </div>
             </div>
@@ -162,7 +163,7 @@
           <div class="grades-Background">
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
-                <h1 class="grade-Complete">40%</h1>
+                <h1 class="grades-Complete-Text">40%</h1>
                 <p class="grades-Dates-Text"> of class completed</p>
               </div>
             </div>
@@ -183,7 +184,7 @@
           <div class="grades-Background">
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
-                <h1 class="grade-Complete">40%</h1>
+                <h1 class="grades-Complete-Text">40%</h1>
                 <p class="grades-Dates-Text"> of class completed</p>
               </div>
             </div>
