--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -48,7 +48,7 @@
 
     <section class="aside">
       <div class="circle">
-        <div><img class="picture" src="images/profile-avatar.jpg"></div>
+        <div><img class="picture" src="../images/profile-avatar.jpg"></div>
       </div>
 
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
