Hotfix since this is not longer the index.html.

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -8,7 +8,7 @@
   <title>Upcoming Courses</title>
 </head>
 <body>
-  <<section class="desktop-background">
+  <section class="desktop-background">
     <!-- A header is used for the home name -->
 
   <header class="body-Header">
