--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Home</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
 </head>
@@ -48,7 +48,7 @@
 
     <section class="aside">
       <div class="circle">
-        <div><img class="picture" src="images/profile-avatar.jpg"></div>
+        <div><img class="picture" src="../images/profile-avatar.jpg"></div>
       </div>
 
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
