trying to fix merge conflict

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header class="body-Header">
 
-    <h4 class="header-Title-Text">Home</h4>
+    <h4 class="header-Title-Text">Home.</h4>
     <!-- The empty h4 is for the current date through javascript.-->
     <ul class="date-Log-Out">
     <li class="header-Date-Text">Date</li>
