--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -14,7 +14,7 @@
 
   <header class="body-Header">
 
-    <h4 class="header-Title-Text">Home</h4>
+    <h4 class="header-Title-Text">Home.</h4>
     <!-- The empty h4 is for the current date through javascript.-->
     <ul class="date-Log-Out">
     <li class="header-Date-Text">Date</li>
@@ -48,14 +48,13 @@
 
     <section class="aside">
       <div class="circle">
-        <div><img class="picture" src="../images/profile-avatar.jpg"></div>
+        <div><img class="picture" src="images/profile-avatar.jpg"></div>
       </div>
 
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
       <div class="aside-List">
       <h5 class="aside-Titles">Academic Services</h5>
       <ul>
-        <li class="aside-Options">Academic Dashboard</li>
         <li class="aside-Options">Current Schedule</li>
         <li class="aside-Options">Grades &amp; Reporting</li>
         <li class="aside-Options">Upcoming Courses</li>
@@ -78,18 +77,18 @@
         </div>
         <!-- The h4 classes seperate each of the sections making it easier to make them side by side in css-->
 
-          <div class="page-Breaks"></div>
+          <div class="upcoming-Due-Dates">
         <h4 class="content-Title-Text">Upcoming Due Dates:</h4>
-        <div class="upcoming-Due-Dates">
           <h4 class="content-Title-Text">11/15</h4>
           <h1 class="content-Subtitle-Text">Web Development I: JavaScript Fundamentals Test</h1>
           <h4 class="content-Title-Text">12/15</h4>
           <h1 class="content-Subtitle-Text">Software Project I: Final Project due by 11:55pm EST</h1>
         </div>
-        <div class="page-break"></div>
+        <div class="page-break third-Break"></div>
+
         <!-- College announcements focuses on the left side content after the page break. each side after the page break are sperated by divs. -->
-        <h4 class="content-Title-Text">College Announcements</h4>
         <div class="college-Announcements">
+        <h4 class="content-Title-Text">College Announcements</h4>
           <h1 class="content-Subtitle-Text">Tutoring Available</h1>
           <p class="content-Paragraph-Text">Students may request free tutoring support in general education and program related courses at the Student Academic Center. Email <a class="content-Email-Text" href="tutoring@stevenscollege.edu" target="_blank">tutoring@stevenscollege.edu</a> to reserve a timeslot.</p>
           <h1 class="content-Subtitle-Text">Internship Workshops</h1>
@@ -97,8 +96,8 @@
 
         </div>
         <!-- The next section are events listed in order but aren't required to use any li. -->
-        <h4 class="content-Title-Text">Upcoming Events</h4>
         <div class="upcoming-Events">
+        <h4 class="content-Title-Text">Upcoming Events</h4>
           <h4 class="content-Title-Text">11/15, 3:00pm</h4>
           <h1 class="content-Subtitle-Text">Math Study Group</h1>
           <h4 class="content-Title-Text">11/15, 7:00pm</h4>
@@ -106,7 +105,7 @@
           <h4 class="content-Title-Text">11/15, 9:00pm</h4>
           <h1 class="content-Subtitle-Text">Movie Night</h1>
           <h4 class="content-Title-Text">11/16, 8:00am</h4>
-          <h1 class="content-Subtitle-Text">Coffee Talk</h1>
+          <h1 class="content-Subtitle-Text">Coffee Talkp</h1>
           <h4 class="content-Title-Text">11/16, 7:00pm</h4>
           <h1 class="content-Subtitle-Text">Intermural Dodgeball</h1>
           <h4 class="content-Title-Text">11/16, 9:00pm</h4>
