written the font styling for the registration page.

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -145,7 +145,7 @@
           </div>
 
           <div class="get-Help-Button">
-            <p class="get-Help-teal">Get Help »</p>
+            <p class="get-Help-Teal">Get Help »</p>
           </div>
         </section>
 
