Made major changes to the homepage and fixed the styles not working properly.

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -14,11 +14,11 @@
 
   <header class="body-Header">
 
-    <h4 class="header-Title-Text">Home.</h4>
+    <h4 class="header-Title-Text">HOME</h4>
     <!-- The empty h4 is for the current date through javascript.-->
     <ul class="date-Log-Out">
     <li class="header-Date-Text">Date</li>
-    <li class="header-Log-Out-Text">Log Out?</li>
+    <li class="header-Log-Out-Text">Log Out? | Settings</li>
     </ul>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
     <div class="page-Breaks top-Break"></div>
@@ -48,7 +48,7 @@
 
     <section class="aside">
       <div class="circle">
-        <div><img class="picture" src="images/profile-avatar.jpg"></div>
+        <div><img class="picture" src="../images/profile-avatar.jpg"></div>
       </div>
 
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
@@ -105,7 +105,7 @@
           <h4 class="content-Title-Text">11/15, 9:00pm</h4>
           <h1 class="content-Subtitle-Text">Movie Night</h1>
           <h4 class="content-Title-Text">11/16, 8:00am</h4>
-          <h1 class="content-Subtitle-Text">Coffee Talkp</h1>
+          <h1 class="content-Subtitle-Text">Coffee Talk</h1>
           <h4 class="content-Title-Text">11/16, 7:00pm</h4>
           <h1 class="content-Subtitle-Text">Intermural Dodgeball</h1>
           <h4 class="content-Title-Text">11/16, 9:00pm</h4>
