--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <meta charset="utf-8">
+  <title>Login</title>
+  <link rel="stylesheet" type="text/css" href="../style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
 </head>
 <body>
   <section class="desktop-background">
     <!-- A header is used for the home name -->
 
-  <header class="body-Header">Date</header>
+    <header class="body-Header">
+
+      <h4 class="header-Title-Text">HOME</h4>
+      <!-- The empty h4 is for the current date through javascript.-->
+      <ul class="Date">
+      <li class="header-Date-Text">Date</li>
+      </ul>
+      <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
+      <div class="page-Breaks top-Break"></div>
+    </header>
 
   <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
   <div class="page-Breaks top-Break"></div>
