linked circle css

--- a/css-circle/index.html
+++ b/css-circle/index.html
@@ -44,7 +44,7 @@
 
         </style>
 
-        <link rel="stylesheet" href="css/circle.css">
+        <link rel="stylesheet" href="circle.css">
 
     </head>
 
