linked circle css to grades and reporting

--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Grades&amp;Reporting</title>
 <link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" href="css-circle/circle.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
 </head>
