test percentage circle

--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -79,7 +79,16 @@
           <h1 class="content-Subtitle-Text">Into to Web Applications</h1>
           <!-- The grade is given a white background to work inside of -->
           <div class="grades-Background">
-            <div class="grades-Circle">
+            <div class="clearfix">
+                <div class="c100 p12 small">
+                    <span>12%</span>
+                    <div class="slice">
+                        <div class="bar"></div>
+                        <div class="fill"></div>
+                    </div>
+                </div>
+
+            </div>
               <div class="grades-Circle-Highlight">
                 <h1 class="grades-Complete-Text">40%</h1>
                 <p class="grades-Dates-Text"> of class completed</p>
