Added type of link connected.

--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Grades&amp;Reporting</title>
 <link rel="stylesheet" type="text/css" href="../style.css">
-<link rel="stylesheet" href="css-circle/circle.css">
+<link rel="stylesheet" type="text/css" href="css-circle/circle.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
 </head>
@@ -49,7 +49,7 @@
 
     <section class="aside">
       <div class="circle">
-        <div><img class="picture" src="images/profile-avatar.jpg"></div>
+        <div><img class="picture" src="../images/profile-avatar.jpg"></div>
       </div>
 
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
