Started working on calendar, lots of work left on it still.

--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -91,7 +91,7 @@
     </div>
 
     <div class="view-As">
-      <p>View As: List</p><span>|</span><p>Calender</p>
+      <p class="view-As-List">View as: List <span class="view-As-Space">| </span>Calender</p>
     </div>
 
     <section class="current-Schedule-Calender">
@@ -102,7 +102,6 @@
           <h4 class="current-Classname-Time">ENGL 101, 8:30 - 9:30AM</h4>
           <h2 class="current-Classname-Title">English Compostion</h2>
         </div>
-
         <div class="cset-105">
           <h4 class="current-Classname-Time">CSET 105, 12:00 - 4:30PM</h4>
           <h2 class="current-Classname-Title">Intro to Web Applications</h2>
