attempted to fix the glitch on the homepage.

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -53,14 +53,14 @@
 
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
       <div class="aside-List">
-      <h5 class="aside-Titles">ACADEMIC SERVICES</h5>
+      <h5 class="aside-Titles">Academic Services</h5>
       <ul>
         <li class="aside-Options">Academic Dashboard</li>
         <li class="aside-Options">Current Schedule</li>
         <li class="aside-Options">Grades &amp; Reporting</li>
         <li class="aside-Options">Upcoming Courses</li>
       </ul>
-      <h5 class="aside-Titles">COLLEGE INFORMATION</h5>
+      <h5 class="aside-Titles">College Information</h5>
       <ul>
         <li class="aside-Options">College Calendar</li>
         <li class="aside-Options">Financial Aid</li>
@@ -70,7 +70,7 @@
     </section>
     <!-- This section comprises of the program announcements and due dates in the top part of the scrolling section. -->
     <section class="scrolling-Content">
-      <h4 class="content-Title-Text program">Program Announcements:</h4>
+      <h4 class="content-Title-Text">Program Announcements:</h4>
 
         <div class="program-Announcements">
           <h1 class="content-Subtitle-Text">Industry Panel: Friday, 1pm</h1>
@@ -110,7 +110,7 @@
           <h4 class="content-Title-Text">11/16, 7:00pm</h4>
           <h1 class="content-Subtitle-Text">Intermural Dodgeball</h1>
           <h4 class="content-Title-Text">11/16, 9:00pm</h4>
-          <h1 class="content-Subtitle-Text">Movie Night</h1>
+          <h1 class="">Movie Night</h1>
         </div>
       </section>
     </section>
