--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -102,6 +102,7 @@
           <h4 class="current-Classname-Time">ENGL 101, 8:30 - 9:30AM</h4>
           <h2 class="current-Classname-Title">English Compostion</h2>
         </div>
+        <div class="free-Time"><p class="break-Time">Break</p></div>
         <div class="cset-105">
           <h4 class="current-Classname-Time">CSET 105, 12:00 - 4:30PM</h4>
           <h2 class="current-Classname-Title">Intro to Web Applications</h2>
@@ -115,7 +116,7 @@
           <h4 class="current-Classname-Time">MATH 100, 8:00 - 9:30AM</h4>
           <h2 class="current-Classname-Title">College Algebra</h2>
         </div>
-
+        <div class="free-Time"><p class="break-Time">Break</p></div>
         <div class="cset-110">
           <h4 class="current-Classname-Time">CSET 110, 12:00 - 4:30PM</h4>
           <h2 class="current-Classname-Title">Web Development 1</h2>
@@ -129,9 +130,9 @@
           <h4 class="current-Classname-Time">ENGL 101, 8:30 - 9:30AM</h4>
           <h2 class="current-Classname-Title">English Compostion</h2>
         </div>
-
-        <div class="cset-110">
-          <h4 class="current-Classname-Time">CSET 110, 12:00 - 4:30PM</h4>
+        <div class="free-Time-Wednesday"><p class="break-Time">Break</p></div>
+        <div class="cset-110-Wednesday">
+          <h4 class="current-Classname-Time">CSET 110, 12:30 - 4:30PM</h4>
           <h2 class="current-Classname-Title">Web Development 1</h2>
         </div>
       </div>
@@ -143,7 +144,7 @@
           <h4 class="current-Classname-Time">MATH 100, 8:00 - 9:30AM</h4>
           <h2 class="current-Classname-Title">College Algebra</h2>
         </div>
-
+        <div class="free-Time"><p class="break-Time">Break</p></div>
         <div class="cset-115">
           <h4 class="current-Classname-Time">CSET 115, 12:00 - 4:30PM</h4>
           <h2 class="current-Classname-Title">Technical Requirements &amp; Data Structures</h2>
@@ -152,7 +153,7 @@
 
       <div class="friday">
         <h1 class="schedule-Day-Text">Friday</h1>
-
+        <div class="free-Time-Friday"><p class="break-Time">Break</p></div>
         <div class="cset-120">
           <h4 class="current-Classname-Time">CSET 120, 12:00 - 4:30PM</h4>
           <h2 class="current-Classname-Title">Software Project 1 Open Lab</h2>
