--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -105,7 +105,7 @@
         <div class="free-Time"><p class="break-Time">Break</p></div>
         <div class="cset-105">
           <h4 class="current-Classname-Time">CSET 105, 12:00 - 4:30PM</h4>
-          <h2 class="current-Classname-Title">Intro to Web Applications.</h2>
+          <h2 class="current-Classname-Title">Intro to Web Applications</h2>
         </div>
       </div>
 
