--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
   <section class="desktop-background">
     <!-- A header is used for the home name -->
 
-  <header class="body-Header">Date</header>
+    <header id="body-Header"></header>
 
-  <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
-  <div class="page-Breaks top-Break"></div>
+    <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
+    <div class="page-Breaks top-Break"></div>
 
-  <section class="login-Portal">
-    <h1 class="">Thaddeus Stevens College of Technology</h1>
-    <h4 class="">Student Portal</h4>
+    <section class="login-Portal">
+      <h1 class="">Thaddeus Stevens College of Technology</h1>
+      <h4 class="">Student Portal</h4>
 
-    <div class="login-Information-Email">
-    <link class="">Email Address</link>
-    </div>
+      <div class="login-Information-Email">
+        <link class="">Email Address</link>
+      </div>
 
-    <div class="login-Information-Password">
-      <link class="">Password</link>
-    </div>
+      <div class="login-Information-Password">
+        <link class="">Password</link>
+      </div>
 
-    <div class="submit-Button">
-      <p class="white-Twelve">SUBMIT</p>
-    </div>
+      <div class="submit-Button">
+        <p class="white-Twelve">SUBMIT</p>
+      </div>
 
-    <h5 class="">Forgot Password</h5>
-  </section>
-
-</body>
-</html>
+      <h5 class="">Forgot Password</h5>
+    </section>
+    <script src="script.js" type="text/javascript"></script>
+  </body>
+  </html>
