--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -324,6 +324,6 @@
 
     </section>
   </section>
-  <script src="" type="text/javascript"></script>
+  <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
