--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -16,7 +16,7 @@
     <h4 class="header-Title-Text">Home</h4>
     <!-- The empty h4 is for the current date through javascript.-->
     <ul class="date-Log-Out">
-    <li class="header-Date-Text">Date</li>
+    <li class="header-Date-Text"><p id="body-Header"></p></li>
     <li class="header-Log-Out-Text">Log Out?</li>
     </ul>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
@@ -162,6 +162,6 @@
     </section>
   </section>
 
-  <script src="javascript/counter.js" type="text/javascript"></script>
+  <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
