Added the ID tag to a few p tags to link the date variable and then changed or added the script to correctly link the javascript.

--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -18,7 +18,7 @@
     <h4 class="header-Title-Text">Home</h4>
     <!-- The empty h4 is for the current date through javascript.-->
     <ul class="date-Log-Out">
-    <li class="header-Date-Text"><p id="dateInsert"></li>
+    <li class="header-Date-Text"><p id="body-Header"></li>
     <li class="header-Log-Out-Text">Log Out?</li>
     </ul>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
