--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -17,7 +17,7 @@
     <h4 class="header-Title-Text">HOME</h4>
     <!-- The empty h4 is for the current date through javascript.-->
     <ul class="date-Log-Out">
-    <li class="header-Date-Text">Date</li>
+    <li class="header-Date-Text"><p id="body-Header"></p></li>
     <li class="header-Log-Out-Text">Log Out? | Settings</li>
     </ul>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
@@ -114,6 +114,6 @@
         </div>
       </section>
     </section>
-    <script src="" type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
   </body>
   </html>
