quick modal set up for edit changes.

--- a/pages/account-settings.html
+++ b/pages/account-settings.html
@@ -104,5 +104,30 @@
         <p class="white-Twelve">Save</p>
       </div>
 
+      <section class="modal">
+        <h5 class="">Update Alternate Email Address</h5>
+        <p class="">To update your alternate email address, please enter it twice below.</p>
+
+        <div class="">
+          <h3 class="">New Email Address</h3>
+        </div>
+
+        <div class="">
+          <h3 class="">Verify Email Address</h3>
+        </div>
+
+        <div class="submit-Button">
+          <p class="white-Twelve">SUBMIT</p>
+        </div>
+
+        <p class="" id="error-Text">Emails do not match.</p>
+
+        <p class="" id="">Your email address has been updated. A verification email has been sent to your new email to finish the update process.</p>
+
+        <div class="done-Button">
+          <p class="white-Twelve">Done</p>
+        </div>
+        
+      </section>
     </body>
     </html>
