--- a/pages/account-settings.html
+++ b/pages/account-settings.html
@@ -127,7 +127,8 @@
         <div class="done-Button">
           <p class="white-Twelve">Done</p>
         </div>
-        
+
       </section>
+      <script src="../script.js" type="text/javascript"></script>
     </body>
     </html>
