--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -18,7 +18,7 @@
     <!-- The empty h4 is for the current date through javascript.-->
     <ul class="date-Log-Out">
     <li class="header-Date-Text"><p id="body-Header"></p></li>
-    <li class="header-Log-Out-Text">Log Out? | Settings</li>
+    <li class="header-Log-Out-Text"><a href="account-settings.html">SETTINGS</a> | <a href="../index.html">LOG OUT?</li>
     </ul>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
     <div class="page-Breaks top-Break"></div>
@@ -55,22 +55,22 @@
       <div class="aside-List">
       <h5 class="aside-Titles">Academic Services</h5>
       <ul>
-        <li class="aside-Options">Academic Dashboard</li>
-        <li class="aside-Options">Current Schedule</li>
-        <li class="aside-Options">Grades &amp; Reporting</li>
-        <li class="aside-Options">Upcoming Courses</li>
+        <li class="aside-Options"><a href="academic-dashboard.html">Academic Dashboard</a></li>
+        <li class="aside-Options"><a href="currentschedule.html">Current Schedule</a></li>
+        <li class="aside-Options"><a href="grades-reporting.html">Grades &amp; Reporting</a></li>
+        <li class="aside-Options"><a href="upcomingcourses.html">Upcoming Courses</a></li>
       </ul>
       <h5 class="aside-Titles">College Information</h5>
       <ul>
-        <li class="aside-Options">College Calendar</li>
-        <li class="aside-Options">Financial Aid</li>
-        <li class="aside-Options">Student Services</li>
+        <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Home.jnz?portlet=Events_Calendar&screen=MainView&screenType=change">College Calendar</a></li>
+        <li class="aside-Options"><a href="https://stevenscollege.edu/financialaid/">Financial Aid</a></li>
+        <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Students/">Student Services</a></li>
       </ul>
     </div>
     </section>
     <!-- This section comprises of the program announcements and due dates in the top part of the scrolling section. -->
     <section class="scrolling-Content">
-      <h4 class="content-Title-Text">Program Announcements:</h4>
+      <h4 class="content-Title-Text content">Program Announcements:</h4>
 
         <div class="program-Announcements">
           <h1 class="content-Subtitle-Text">Industry Panel: Friday, 1pm</h1>
@@ -89,7 +89,7 @@
 
         <!-- College announcements focuses on the left side content after the page break. each side after the page break are sperated by divs. -->
         <div class="college-Announcements">
-        <h4 class="content-Title-Text">College Announcements</h4>
+        <h4 class="content-Title-Text">College Announcements:</h4>
           <h1 class="content-Subtitle-Text">Tutoring Available</h1>
           <p class="content-Paragraph-Text">Students may request free tutoring support in general education and program related courses at the Student Academic Center. Email <a class="content-Email-Text" href="tutoring@stevenscollege.edu" target="_blank">tutoring@stevenscollege.edu</a> to reserve a timeslot.</p>
           <h1 class="content-Subtitle-Text">Internship Workshops</h1>
@@ -98,8 +98,8 @@
         </div>
         <!-- The next section are events listed in order but aren't required to use any li. -->
         <div class="upcoming-Events">
-        <h4 class="content-Title-Text">Upcoming Events</h4>
-          <h4 class="content-Title-Text">11/15, 3:00pm</h4>
+        <h4 class="content-Title-Text">Upcoming Events:</h4>
+          <h4 class="content-Title-Text dates">11/15, 3:00pm</h4>
           <h1 class="content-Subtitle-Text">Math Study Group</h1>
           <h4 class="content-Title-Text">11/15, 7:00pm</h4>
           <h1 class="content-Subtitle-Text">Intermual Dodgeball</h1>
@@ -110,10 +110,10 @@
           <h4 class="content-Title-Text">11/16, 7:00pm</h4>
           <h1 class="content-Subtitle-Text">Intermural Dodgeball</h1>
           <h4 class="content-Title-Text">11/16, 9:00pm</h4>
-          <h1 class="">Movie Night</h1>
+          <h1 class="content-Subtitle-Text">Movie Night</h1>
         </div>
       </section>
     </section>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="../script.js" type="text/javascript"></script>
   </body>
   </html>
