--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -249,7 +249,8 @@
         <div class="popup-Outline">
           <h4 class="upc-C-Seven">Course Registration Help</h4>
           <h4 class="upc-Bl-14">Error: Major Courses Unavailable.</h4>
-          <p class="upc-Bl-13">Your response has been recorded. Support will be in touch via email.</p>
+          <p class="upc-Bl-13">Your response has been recorded. Support will</p>
+            <p class="upc-Bl-13">be in touch via email.</p>
           <div class="okay-Button">
             <p class="white-Twelve">OKAY</p>
           </div>
@@ -271,6 +272,7 @@
             <h4 class="upc-C-Seven">Course Registration Help</h4>
             <h4 class="upc-Bl-14">Error: Other Issue</h4>
             <p class="upc-Bl-13">Please briefly describe the issue you are having:</p>
+            <div class="text-Box"></div>
             <div class="submit-Button">
               <p class="white-Twelve">SUBMIT</p>
             </div>
