Added a log out modal and indented all pages that needed it.

--- a/pages/academic-dashboard.html
+++ b/pages/academic-dashboard.html
@@ -158,6 +158,17 @@
 
         <a class="" href="">See More »</a>
       </section>
-      <script src="../script.js" type="text/javascript"></script>
-    </body>
-    </html>
+
+      <!-- This is the logout modal, treat this appropriatly. -->
+      <section class="" id="">
+        <h3 class="">Log out</h3>
+        <p class="">Are you sure you’d like to log out?</p>
+
+        <div class="">
+          <h3 class="">LOG OUT</h3>
+          <h3 class="">NEVERMIND</h3>
+        </div>
+
+        <script src="../script.js" type="text/javascript"></script>
+      </body>
+      </html>
