--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -11,39 +11,39 @@
   <section class="desktop-background">
     <!-- A header is used for the home name -->
 
-  <header class="body-Header">
+    <header class="body-Header">
 
-    <h4 class="header-Title-Text">Home</h4>
-    <!-- The empty h4 is for the current date through javascript.-->
-    <ul class="date-Log-Out">
-    <li class="header-Date-Text"><p id="body-Header"></p></li>
-    <li class="header-Log-Out-Text">Log Out?</li>
-    </ul>
-    <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
-    <div class="page-Breaks top-Break"></div>
-  </header>
-  <!-- This section consists of the hero content used on every other document -->
-  <section class="hero-Content">
-    <!-- Each div is used to contain the headings as they need to be side by side of eachother in a non listed form. -->
-    <div class="current-Program">
-      <h4 class="content-Title-Text">CURRENT PROGRAM:</h4>
-      <h1 class="content-Subtitle-Text">Computer Software Engineering Technology</h1>
-    </div>
-    <div class="current-Semester">
-      <h4 class="hero-Title-Text">Current Semester:</h4>
-      <h1 class="content-Subtitle-Text">Fall 2017</h1>
-    </div>
-    <div class="enrolled-Credit-Hours">
-      <h4 class="hero-Title-Text">Enrolled Credit Hours:</h4>
-      <h1 class="content-Subtitle-Text">15</h1>
-    </div>
-    <div class="academic-Standing">
-      <h4 class="hero-Title-Text">Academic Standing</h4>
-      <h1 class="content-Subtitle-Text">Good</h1>
-    </div>
-    <div class="page-Breaks second-Break"></div>
-  </section>
-  <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
+      <h4 class="header-Title-Text">Home</h4>
+      <!-- The empty h4 is for the current date through javascript.-->
+      <ul class="date-Log-Out">
+        <li class="header-Date-Text"><p id="body-Header"></p></li>
+        <li class="header-Log-Out-Text">Log Out?</li>
+      </ul>
+      <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
+      <div class="page-Breaks top-Break"></div>
+    </header>
+    <!-- This section consists of the hero content used on every other document -->
+    <section class="hero-Content">
+      <!-- Each div is used to contain the headings as they need to be side by side of eachother in a non listed form. -->
+      <div class="current-Program">
+        <h4 class="content-Title-Text">CURRENT PROGRAM:</h4>
+        <h1 class="content-Subtitle-Text">Computer Software Engineering Technology</h1>
+      </div>
+      <div class="current-Semester">
+        <h4 class="hero-Title-Text">Current Semester:</h4>
+        <h1 class="content-Subtitle-Text">Fall 2017</h1>
+      </div>
+      <div class="enrolled-Credit-Hours">
+        <h4 class="hero-Title-Text">Enrolled Credit Hours:</h4>
+        <h1 class="content-Subtitle-Text">15</h1>
+      </div>
+      <div class="academic-Standing">
+        <h4 class="hero-Title-Text">Academic Standing</h4>
+        <h1 class="content-Subtitle-Text">Good</h1>
+      </div>
+      <div class="page-Breaks second-Break"></div>
+    </section>
+    <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
 
     <section class="aside">
       <div class="circle">
@@ -52,20 +52,20 @@
 
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
       <div class="aside-List">
-      <h5 class="aside-Titles">Academic Services</h5>
-      <ul>
-        <li class="aside-Options">Academic Dashboard</li>
-        <li class="aside-Options">Current Schedule</li>
-        <li class="aside-Options">Grades &amp; Reporting</li>
-        <li class="aside-Options">Upcoming Courses</li>
-      </ul>
-      <h5 class="aside-Titles">College Information</h5>
-      <ul>
-        <li class="aside-Options">College Calendar</li>
-        <li class="aside-Options">Financial Aid</li>
-        <li class="aside-Options">Student Services</li>
-      </ul>
-    </div>
+        <h5 class="aside-Titles">Academic Services</h5>
+        <ul>
+          <li class="aside-Options">Academic Dashboard</li>
+          <li class="aside-Options">Current Schedule</li>
+          <li class="aside-Options">Grades &amp; Reporting</li>
+          <li class="aside-Options">Upcoming Courses</li>
+        </ul>
+        <h5 class="aside-Titles">College Information</h5>
+        <ul>
+          <li class="aside-Options">College Calendar</li>
+          <li class="aside-Options">Financial Aid</li>
+          <li class="aside-Options">Student Services</li>
+        </ul>
+      </div>
     </section>
 
     <div class="current-Schedule">
@@ -161,7 +161,16 @@
       </div>
     </section>
   </section>
+  <!-- This is the logout modal, treat this appropriatly. -->
+  <section class="" id="">
+    <h3 class="">Log out</h3>
+    <p class="">Are you sure you’d like to log out?</p>
 
-  <script src="script.js" type="text/javascript"></script>
-</body>
-</html>
+    <div class="">
+      <h3 class="">LOG OUT</h3>
+      <h3 class="">NEVERMIND</h3>
+    </div>
+
+    <script src="script.js" type="text/javascript"></script>
+  </body>
+  </html>
