--- a/pages/account-settings.html
+++ b/pages/account-settings.html
@@ -129,6 +129,16 @@
         </div>
 
       </section>
-      <script src="../script.js" type="text/javascript"></script>
-    </body>
-    </html>
+
+      <!-- This is the logout modal, treat this appropriatly. -->
+      <section class="" id="">
+        <h3 class="">Log out</h3>
+        <p class="">Are you sure you’d like to log out?</p>
+
+        <div class="">
+          <h3 class="">LOG OUT</h3>
+          <h3 class="">NEVERMIND</h3>
+        </div>
+        <script src="../script.js" type="text/javascript"></script>
+      </body>
+      </html>
