--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -12,65 +12,65 @@
   <section class="desktop-background">
     <!-- A header is used for the home name -->
 
-  <header class="body-Header">
+    <header class="body-Header">
 
-    <h4 class="header-Title-Text">HOME</h4>
-    <!-- The empty h4 is for the current date through javascript.-->
-    <ul class="date-Log-Out">
-    <li class="header-Date-Text"><p id="body-Header"></p></li>
-    <li class="header-Log-Out-Text"><a href="account-settings.html">SETTINGS</a> | <a href="../index.html">LOG OUT?</li>
-    </ul>
-    <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
-    <div class="page-Breaks top-Break"></div>
-  </header>
-  <!-- This section consists of the hero content used on every other document -->
-  <section class="hero-Content">
-    <!-- Each div is used to contain the headings as they need to be side by side of eachother in a non listed form. -->
-    <div class="current-Program">
-      <h4 class="content-Title-Text">CURRENT PROGRAM:</h4>
-      <h1 class="content-Subtitle-Text">Computer Software Engineering Technology</h1>
-    </div>
-    <div class="current-Semester">
-      <h4 class="hero-Title-Text">Current Semester:</h4>
-      <h1 class="content-Subtitle-Text">Fall 2017</h1>
-    </div>
-    <div class="enrolled-Credit-Hours">
-      <h4 class="hero-Title-Text">Enrolled Credit Hours:</h4>
-      <h1 class="content-Subtitle-Text">15</h1>
-    </div>
-    <div class="academic-Standing">
-      <h4 class="hero-Title-Text">Academic Standing</h4>
-      <h1 class="content-Subtitle-Text">Good</h1>
-    </div>
-    <div class="page-Breaks second-Break"></div>
-  </section>
-  <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
+      <h4 class="header-Title-Text">HOME</h4>
+      <!-- The empty h4 is for the current date through javascript.-->
+      <ul class="date-Log-Out">
+        <li class="header-Date-Text"><p id="body-Header"></p></li>
+        <li class="header-Log-Out-Text"><a href="account-settings.html">SETTINGS</a> | <a href="../index.html">LOG OUT?</li>
+        </ul>
+        <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
+        <div class="page-Breaks top-Break"></div>
+      </header>
+      <!-- This section consists of the hero content used on every other document -->
+      <section class="hero-Content">
+        <!-- Each div is used to contain the headings as they need to be side by side of eachother in a non listed form. -->
+        <div class="current-Program">
+          <h4 class="content-Title-Text">CURRENT PROGRAM:</h4>
+          <h1 class="content-Subtitle-Text">Computer Software Engineering Technology</h1>
+        </div>
+        <div class="current-Semester">
+          <h4 class="hero-Title-Text">Current Semester:</h4>
+          <h1 class="content-Subtitle-Text">Fall 2017</h1>
+        </div>
+        <div class="enrolled-Credit-Hours">
+          <h4 class="hero-Title-Text">Enrolled Credit Hours:</h4>
+          <h1 class="content-Subtitle-Text">15</h1>
+        </div>
+        <div class="academic-Standing">
+          <h4 class="hero-Title-Text">Academic Standing</h4>
+          <h1 class="content-Subtitle-Text">Good</h1>
+        </div>
+        <div class="page-Breaks second-Break"></div>
+      </section>
+      <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
 
-    <section class="aside">
-      <div class="circle">
-        <div><img class="picture" src="../images/profile-avatar.jpg"></div>
-      </div>
+      <section class="aside">
+        <div class="circle">
+          <div><img class="picture" src="../images/profile-avatar.jpg"></div>
+        </div>
 
-      <h1 class="profile-Name">Benedic Cumberbatch</h1>
-      <div class="aside-List">
-      <h5 class="aside-Titles">Academic Services</h5>
-      <ul>
-        <li class="aside-Options"><a href="academic-dashboard.html">Academic Dashboard</a></li>
-        <li class="aside-Options"><a href="currentschedule.html">Current Schedule</a></li>
-        <li class="aside-Options"><a href="grades-reporting.html">Grades &amp; Reporting</a></li>
-        <li class="aside-Options"><a href="upcomingcourses.html">Upcoming Courses</a></li>
-      </ul>
-      <h5 class="aside-Titles">College Information</h5>
-      <ul>
-        <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Home.jnz?portlet=Events_Calendar&screen=MainView&screenType=change">College Calendar</a></li>
-        <li class="aside-Options"><a href="https://stevenscollege.edu/financialaid/">Financial Aid</a></li>
-        <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Students/">Student Services</a></li>
-      </ul>
-    </div>
-    </section>
-    <!-- This section comprises of the program announcements and due dates in the top part of the scrolling section. -->
-    <section class="scrolling-Content">
-      <h4 class="content-Title-Text content">Program Announcements:</h4>
+        <h1 class="profile-Name">Benedic Cumberbatch</h1>
+        <div class="aside-List">
+          <h5 class="aside-Titles">Academic Services</h5>
+          <ul>
+            <li class="aside-Options"><a href="academic-dashboard.html">Academic Dashboard</a></li>
+            <li class="aside-Options"><a href="currentschedule.html">Current Schedule</a></li>
+            <li class="aside-Options"><a href="grades-reporting.html">Grades &amp; Reporting</a></li>
+            <li class="aside-Options"><a href="upcomingcourses.html">Upcoming Courses</a></li>
+          </ul>
+          <h5 class="aside-Titles">College Information</h5>
+          <ul>
+            <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Home.jnz?portlet=Events_Calendar&screen=MainView&screenType=change">College Calendar</a></li>
+            <li class="aside-Options"><a href="https://stevenscollege.edu/financialaid/">Financial Aid</a></li>
+            <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Students/">Student Services</a></li>
+          </ul>
+        </div>
+      </section>
+      <!-- This section comprises of the program announcements and due dates in the top part of the scrolling section. -->
+      <section class="scrolling-Content">
+        <h4 class="content-Title-Text content">Program Announcements:</h4>
 
         <div class="program-Announcements">
           <h1 class="content-Subtitle-Text">Industry Panel: Friday, 1pm</h1>
@@ -78,8 +78,8 @@
         </div>
         <!-- The h4 classes seperate each of the sections making it easier to make them side by side in css-->
 
-          <div class="upcoming-Due-Dates">
-        <h4 class="content-Title-Text">Upcoming Due Dates:</h4>
+        <div class="upcoming-Due-Dates">
+          <h4 class="content-Title-Text">Upcoming Due Dates:</h4>
           <h4 class="content-Title-Text">11/15</h4>
           <h1 class="content-Subtitle-Text">Web Development I: JavaScript Fundamentals Test</h1>
           <h4 class="content-Title-Text">12/15</h4>
@@ -89,31 +89,40 @@
 
         <!-- College announcements focuses on the left side content after the page break. each side after the page break are sperated by divs. -->
         <div class="college-Announcements">
-        <h4 class="content-Title-Text">College Announcements:</h4>
+          <h4 class="content-Title-Text">College Announcements:</h4>
           <h1 class="content-Subtitle-Text">Tutoring Available</h1>
           <p class="content-Paragraph-Text">Students may request free tutoring support in general education and program related courses at the Student Academic Center. Email <a class="content-Email-Text" href="tutoring@stevenscollege.edu" target="_blank">tutoring@stevenscollege.edu</a> to reserve a timeslot.</p>
           <h1 class="content-Subtitle-Text">Internship Workshops</h1>
           <p class="content-Paragraph-Text">Learn how to register for &amp; utilize our college central netowrk to connect with job and internship opportunities. We’ll also provide you resources to connect with companies in your hometown for summer internships. RSVP by emailing <a class="content-Email-Text" href="tutoring@stevenscollege.edu" target="_blank">internships@stevenscollege.edu</a>.
 
-        </div>
-        <!-- The next section are events listed in order but aren't required to use any li. -->
-        <div class="upcoming-Events">
-        <h4 class="content-Title-Text">Upcoming Events:</h4>
-          <h4 class="content-Title-Text dates">11/15, 3:00pm</h4>
-          <h1 class="content-Subtitle-Text">Math Study Group</h1>
-          <h4 class="content-Title-Text">11/15, 7:00pm</h4>
-          <h1 class="content-Subtitle-Text">Intermual Dodgeball</h1>
-          <h4 class="content-Title-Text">11/15, 9:00pm</h4>
-          <h1 class="content-Subtitle-Text">Movie Night</h1>
-          <h4 class="content-Title-Text">11/16, 8:00am</h4>
-          <h1 class="content-Subtitle-Text">Coffee Talk</h1>
-          <h4 class="content-Title-Text">11/16, 7:00pm</h4>
-          <h1 class="content-Subtitle-Text">Intermural Dodgeball</h1>
-          <h4 class="content-Title-Text">11/16, 9:00pm</h4>
-          <h1 class="content-Subtitle-Text">Movie Night</h1>
-        </div>
+          </div>
+          <!-- The next section are events listed in order but aren't required to use any li. -->
+          <div class="upcoming-Events">
+            <h4 class="content-Title-Text">Upcoming Events:</h4>
+            <h4 class="content-Title-Text dates">11/15, 3:00pm</h4>
+            <h1 class="content-Subtitle-Text">Math Study Group</h1>
+            <h4 class="content-Title-Text">11/15, 7:00pm</h4>
+            <h1 class="content-Subtitle-Text">Intermual Dodgeball</h1>
+            <h4 class="content-Title-Text">11/15, 9:00pm</h4>
+            <h1 class="content-Subtitle-Text">Movie Night</h1>
+            <h4 class="content-Title-Text">11/16, 8:00am</h4>
+            <h1 class="content-Subtitle-Text">Coffee Talk</h1>
+            <h4 class="content-Title-Text">11/16, 7:00pm</h4>
+            <h1 class="content-Subtitle-Text">Intermural Dodgeball</h1>
+            <h4 class="content-Title-Text">11/16, 9:00pm</h4>
+            <h1 class="content-Subtitle-Text">Movie Night</h1>
+          </div>
+        </section>
       </section>
-    </section>
-    <script src="../script.js" type="text/javascript"></script>
-  </body>
-  </html>
+      <!-- This is the logout modal, treat this appropriatly. -->
+      <section class="" id="">
+        <h3 class="">Log out</h3>
+        <p class="">Are you sure you’d like to log out?</p>
+
+        <div class="">
+          <h3 class="">LOG OUT</h3>
+          <h3 class="">NEVERMIND</h3>
+        </div>
+        <script src="../script.js" type="text/javascript"></script>
+      </body>
+      </html>
