--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -161,7 +161,8 @@
       </div>
     </section>
   </section>
-
-  <script src="script.js" type="text/javascript"></script>
+  <footer>
+    <script src="../script.js" type="text/javascript"></script>
+  </footer>
 </body>
 </html>
