--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -18,8 +18,8 @@
     <h4 class="header-Title-Text">Home</h4>
     <!-- The empty h4 is for the current date through javascript.-->
     <ul class="date-Log-Out">
-    <li class="header-Date-Text"><p id="body-Header"></li>
-    <li class="header-Log-Out-Text">Log Out?</li>
+    <li class="header-Date-Text"><p id="body-Header"></p></li>
+    <li class="header-Log-Out-Text"><a href="account-settings.html">SETTINGS</a> | <a href="../index.html">LOG OUT?</li>
     </ul>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
     <div class="page-Breaks top-Break"></div>
@@ -47,27 +47,27 @@
   </section>
   <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
 
-    <section class="aside">
-      <div class="circle">
-        <div><img class="picture" src="../images/profile-avatar.jpg"></div>
-      </div>
-
-      <h1 class="profile-Name">Benedic Cumberbatch</h1>
-      <div class="aside-List">
-      <h5 class="aside-Titles">Academic Services</h5>
-      <ul>
-        <li class="aside-Options">Academic Dashboard</li>
-        <li class="aside-Options">Current Schedule</li>
-        <li class="aside-Options">Grades &amp; Reporting</li>
-        <li class="aside-Options">Upcoming Courses</li>
-      </ul>
-      <h5 class="aside-Titles">College Information</h5>
-      <ul>
-        <li class="aside-Options">College Calendar</li>
-        <li class="aside-Options">Financial Aid</li>
-        <li class="aside-Options">Student Services</li>
-      </ul>
+  <section class="aside">
+    <div class="circle">
+      <div><img class="picture" src="../images/profile-avatar.jpg"></div>
     </div>
+
+    <h1 class="profile-Name">Benedic Cumberbatch</h1>
+    <div class="aside-List">
+    <h5 class="aside-Titles">Academic Services</h5>
+    <ul>
+      <li class="aside-Options"><a href="academic-dashboard.html">Academic Dashboard</a></li>
+      <li class="aside-Options"><a href="currentschedule.html">Current Schedule</a></li>
+      <li class="aside-Options"><a href="grades-reporting.html">Grades &amp; Reporting</a></li>
+      <li class="aside-Options"><a href="upcomingcourses.html">Upcoming Courses</a></li>
+    </ul>
+    <h5 class="aside-Titles">College Information</h5>
+    <ul>
+      <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Home.jnz?portlet=Events_Calendar&screen=MainView&screenType=change">College Calendar</a></li>
+      <li class="aside-Options"><a href="https://stevenscollege.edu/financialaid/">Financial Aid</a></li>
+      <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Students/">Student Services</a></li>
+    </ul>
+  </div>
   </section>
 
     <section class="scrolling-Content">
