--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -238,7 +238,10 @@
           <h4 class="content-Title-Text">Current Program:</h4>
           <h4 class="upc-Bl-14">Computer Software Engineering Technology</h4>
           <h5 class="content-Title-Text">New Program</h5>
-          <div class="dropdown-Menu-Class-Selection"></div>
+            <select class="dropdown-Menu-Class-Selection">
+              <option value="0"></option>
+            </select>
+          </div>
           <div class="submit-Button">
             <p class="white-Twelve">SUBMIT</p>
           </div>
