I think css is finished for schedule page. Calendar is hidden. Need JS added to change when clicked.

--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -91,7 +91,7 @@
     </div>
 
     <div class="view-As">
-      <p class="view-As-List">View as: List <span class="view-As-Space">| </span>Calender</p>
+      <p class="view-As-List">View as: List <span class="view-Space"> | </span> Calender</div></p>
     </div>
 
     <section class="current-Schedule-Calender">
@@ -171,8 +171,8 @@
       <h3 class="">LOG OUT</h3>
       <h3 class="">NEVERMIND</h3>
     </div>
+  </section>
 
     <script src="script.js" type="text/javascript"></script>
   </body>
   </html>
-
