--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
     <div class="page-Breaks top-Break"></div>
 
     <section class="login-Portal">
-      <h1 class="">Thaddeus Stevens College of Technology</h1>
-      <h4 class="">Student Portal</h4>
+      <h1 class="school-Name">Thaddeus Stevens College of Technology</h1>
+      <h4 class="student-Portal">Student Portal</h4>
 
       <div class="login-Information-Email">
-        <link class="">Email Address</link>
+        <form class="email-Entry">
+          <input type="text" name="email">Email</input>
+        </form>
       </div>
 
       <div class="login-Information-Password">
-        <link class="">Password</link>
+        <form class="password-Entry">
+          <input type="text" name="password">Password</input>
+        </form>
       </div>
 
       <div class="submit-Button">
