made more boxes

--- a/pages/account-settings.html
+++ b/pages/account-settings.html
@@ -57,7 +57,6 @@
         <h3 class="">Home Address:</h3>
         <h3 class="" id="street">1234 Main Road, </h3><h3 class="" id="city"> Lancaster,</h3>
         <h3 class="" id="state">Pennsylvania </h3><h3 class="" id="zip">17603</h3>
-
         <div class="" id="edit-Key">Edit</div>
       </div>
 
@@ -68,35 +67,30 @@
           <li class="" id="apartment">#3A</li>
           <li class=""><p id="city">Lancaster, </p><p id="state">Pennsylvania </p><p id="zip">17602</p></li>
         </ul>
-
         <div class="" id="edit-Key">Edit</div>
       </div>
 
       <div class="">
         <h3 class="">Cell Phone:</h3>
         <h3 class="" id="phone-Number">717-984-2837</h3>
-
         <div class="" id="edit-Key">Edit</div>
       </div>
 
       <div class="">
         <h3 class="">Alternate Phone:</h3>
         <h3 class="" id="alt-Phone-Number">717-900-9381</h3>
-
         <div class="" id="edit-Key">Edit</div>
       </div>
 
       <div class="">
         <h3 class="">College Email Address:</h3>
         <h3 class="" id="college-Email">schmidtt@stevenscollege.edu</h3>
-
         <div class="" id="edit-Key">Edit</div>
       </div>
 
       <div class="">
         <h3 class="">Alternate Email:</h3>
         <h3 class="" id="alt-email">henri.schm@gmail.com</h3>
-
         <div class="" id="edit-Key">Edit</div>
       </div>
 
@@ -104,37 +98,46 @@
         <p class="white-Twelve">Save</p>
       </div>
 
-      <section class="modal">
+      <section class="pop-Up-Email">
         <h5 class="">Update Alternate Email Address</h5>
-        <p class="">To update your alternate email address, please enter it twice below.</p>
-
-        <div class="">
-          <h3 class="">New Email Address</h3>
+        <p class="verify-Email">To update your alternate email address, please enter it twice below.</p>
+        <div class="email-Box">
+          <h3 class="enter-Email">New Email Address</h3>
         </div>
-
-        <div class="">
-          <h3 class="">Verify Email Address</h3>
+        <div class="email-Box">
+          <h3 class="enter-Email">Verify Email Address</h3>
         </div>
-
-        <div class="submit-Button">
+        <div class="submit-Button setting-Submit">
           <p class="white-Twelve">SUBMIT</p>
         </div>
+        </section>
 
-        <p class="" id="error-Text">Emails do not match.</p>
+        <section class="pop-Up-Email-Error">
+          <h5 class="">Update Alternate Email Address</h5>
+          <p class="verify-Email">To update your alternate email address, please enter it twice below.</p>
+          <div class="email-Box email-Fail">
+            <h3 class="enter-Email">New Email Address</h3>
+          </div>
+          <div class="email-Box email-Fail">
+            <h3 class="enter-Email">Verify Email Address</h3>
+          </div>
+          <p class="error-Text" id="error-Text">Emails do not match.</p>
+          <div class="submit-Button setting-Submit">
+            <p class="white-Twelve">SUBMIT</p>
+          </div>
+          </section>
 
+          <section class="pop-Up-Email-Approve">
         <p class="" id="">Your email address has been updated. A verification email has been sent to your new email to finish the update process.</p>
-
         <div class="done-Button">
           <p class="white-Twelve">Done</p>
         </div>
-
       </section>
 
       <!-- This is the logout modal, treat this appropriatly. -->
-      <section class="" id="">
+      <section class="log-Out" id="">
         <h3 class="">Log out</h3>
         <p class="">Are you sure you’d like to log out?</p>
-
         <div class="">
           <h3 class="">LOG OUT</h3>
           <h3 class="">NEVERMIND</h3>
