--- a/pages/account-settings.html
+++ b/pages/account-settings.html
@@ -128,6 +128,7 @@
           </section>
 
           <section class="pop-Up-Email-Approve">
+            <h5 class="">Update Alternate Email Address</h5>
         <p class="" id="">Your email address has been updated. A verification email has been sent to your new email to finish the update process.</p>
         <div class="done-Button">
           <p class="white-Twelve">Done</p>
