--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -23,6 +23,7 @@
         <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
         <div class="page-Breaks top-Break"></div>
       </header>
+    </section>
       <!-- This section consists of the hero content used on every other document -->
       <section class="hero-Content">
         <!-- Each div is used to contain the headings as they need to be side by side of eachother in a non listed form. -->
@@ -62,9 +63,9 @@
           </ul>
           <h5 class="aside-Titles">College Information</h5>
           <ul>
-            <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Home.jnz?portlet=Events_Calendar&screen=MainView&screenType=change">College Calendar</a></li>
-            <li class="aside-Options"><a href="https://stevenscollege.edu/financialaid/">Financial Aid</a></li>
-            <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Students/">Student Services</a></li>
+            <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Home.jnz?portlet=Events_Calendar&screen=MainView&screenType=change%22%3ECollege">Calendar</a></li>
+            <li class="aside-Options"><a href="https://stevenscollege.edu/financialaid/%22%3E">Financial Aid</a></li>
+            <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Students/%22%3EStudent">Services</a></li>
           </ul>
         </div>
       </section>
