--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
     <div class="page-Breaks top-Break"></div>
+  </section>
 
     <section class="login-Portal">
       <h1 class="school-Name">Thaddeus Stevens College of Technology</h1>
@@ -36,7 +37,7 @@
         <p class="white-Twelve">SUBMIT</p>
       </div>
 
-      <h5 class="">Forgot Password</h5>
+      <h5 class="forgot-Password">Forgot Password</h5>
     </section>
     <script src="script.js" type="text/javascript"></script>
   </body>
