Pushing the commits I made yesterday. Big changes to the grades, just need to change the padding a little, and work on the circles for the academic dashboard and grades pages.

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -18,7 +18,7 @@
       <!-- The empty h4 is for the current date through javascript.-->
       <ul class="date-Log-Out">
         <li class="header-Date-Text"><p id="body-Header"></p></li>
-        <li class="header-Log-Out-Text"><a href="account-settings.html">SETTINGS</a> | <a href="../index.html">LOG OUT?</li>
+        <li class="header-Log-Out-Text"><a href="account-settings.html">SETTINGS</a> | <a href="../index.html">LOG OUT?</a></li>
         </ul>
         <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
         <div class="page-Breaks top-Break"></div>
