--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -13,11 +13,11 @@
     <!-- A header is used for the home name -->
 
     <header class="body-Header">
-    <h4 class="header-Title-Text">Home</h4>
+    <h4 class="header-Title-Text">HOME > ACADEMIC SERVICES > <h4 class="content-Subtitle-Text">GRADES & REPORTING</h4></h4>
     <!-- The empty h4 is for the current date through javascript.-->
     <ul class="date-Log-Out">
     <li class="header-Date-Text"><p id="body-Header"></p></li>
-    <li class="header-Log-Out-Text"><a href="account-settings.html">SETTINGS</a> | <a href="../index.html">LOG OUT?</li>
+    <li class="header-Log-Out-Text"><a href="account-settings.html">SETTINGS</a> | <a href="../index.html">LOG OUT?</a></li>
     </ul>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
     <div class="page-Breaks top-Break"></div>
@@ -199,26 +199,16 @@
             <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
         </div>
-        <!-- More divs are used inside of the white box to  -->
-        <div class="grades-Start-Date">
-          <h6 class="grades-Dates-Text">Start Date:</h6>
-          <p class="grades-Dates-Text">August 20, 2017</p>
-        </div>
-        <div class="grades-End-Date">
-          <h6 class="grades-Dates-Text">End Date:</h6>
-          <p class="grades-Dates-Text">December 15, 2017</p>
-        </div>
-      </div>
       <!-- Here starts the second half of the scrolling section. -->
       <div class="right-Content">
         <div class="grades-Percent-Background">
-          <h6 class="grades-Title-Text">Current Percent:</h6>
+          <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
           <h1 class="grades-Percent">%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
-        <div class="right-Content-Subtitle-Boxes">
+        <div class="left-Content-Subtitle-Boxes">
           <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
           <h6 class="grades-Subtitle-Text">CSS Test</h6>
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
@@ -230,13 +220,13 @@
         </div>
 
         <div class="grades-Percent-Background">
-          <h6 class="grades-Title-Text">Current Percent:</h6>
+          <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
           <h1 class="grades-Percent">%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
-        <div class="right-Content-Subtitle-Boxes">
+        <div class="left-Content-Subtitle-Boxes">
           <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
           <h6 class="grades-Subtitle-Text">CSS Test</h6>
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
@@ -248,13 +238,13 @@
         </div>
 
         <div class="grades-Percent-Background">
-          <h6 class="grades-Title-Text">Current Percent:</h6>
+          <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
           <h1 class="grades-Percent">%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
-        <div class="right-Content-Subtitle-Boxes">
+        <div class="left-Content-Subtitle-Boxes">
           <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
           <h6 class="grades-Subtitle-Text">CSS Test</h6>
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
@@ -266,13 +256,13 @@
         </div>
 
         <div class="grades-Percent-Background">
-          <h6 class="grades-Title-Text">Current Percent:</h6>
+          <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
           <h1 class="grades-Percent">%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
-        <div class="right-Content-Subtitle-Boxes">
+        <div class="left-Content-Subtitle-Boxes">
           <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
           <h6 class="grades-Subtitle-Text">CSS Test</h6>
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
@@ -284,13 +274,13 @@
         </div>
 
         <div class="grades-Percent-Background">
-          <h6 class="grades-Title-Text">Current Percent:</h6>
+          <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
           <h1 class="grades-Percent">%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
-        <div class="right-Content-Subtitle-Boxes">
+        <div class="left-Content-Subtitle-Boxes">
           <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
           <h6 class="grades-Subtitle-Text">CSS Test</h6>
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
@@ -302,13 +292,13 @@
         </div>
 
         <div class="grades-Percent-Background">
-          <h6 class="grades-Title-Text">Current Percent:</h6>
+          <h6 class="grades-Title-Text">CURRENT PERCENT:</h6>
           <!-- This h1 has to be calculated in JavaScript -->
           <h1 class="grades-Percent">%</h1>
         </div>
         <h6 class="grades-Title-Text">Recently Graded</h6>
         <!-- The divs here seperate the titles and percentages -->
-        <div class="right-Content-Subtitle-Boxes">
+        <div class="left-Content-Subtitle-Boxes">
           <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
           <h6 class="grades-Subtitle-Text">CSS Test</h6>
           <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
@@ -332,6 +322,6 @@
     <h3 class="">LOG OUT</h3>
     <h3 class="">NEVERMIND</h3>
   </div>
-  <script src="script.js" type="text/javascript"></script>
+  <script src="../script.js" type="text/javascript"></script>
 </body>
 </html>
