--- a/pages/account-settings.html
+++ b/pages/account-settings.html
@@ -140,9 +140,10 @@
         <h3 class="">Log out</h3>
         <p class="">Are you sure you’d like to log out?</p>
         <div class="">
-          <h3 class="">LOG OUT</h3>
-          <h3 class="">NEVERMIND</h3>
+          <h3 class="log-Out-Button">LOG OUT</h3>
+          <h3 class="nevermind-Button">NEVERMIND</h3>
         </div>
+      </section>
         <script src="../script.js" type="text/javascript"></script>
       </body>
       </html>
