Upcoming courses HTML aside links updated to current format.

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -52,20 +52,20 @@
 
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
       <div class="aside-List">
-        <h5 class="aside-Titles">Academic Services</h5>
-        <ul>
-          <li class="aside-Options">Academic Dashboard</li>
-          <li class="aside-Options">Current Schedule</li>
-          <li class="aside-Options">Grades &amp; Reporting</li>
-          <li class="aside-Options">Upcoming Courses</li>
-        </ul>
-        <h5 class="aside-Titles">College Information</h5>
-        <ul>
-          <li class="aside-Options">College Calendar</li>
-          <li class="aside-Options">Financial Aid</li>
-          <li class="aside-Options">Student Services</li>
-        </ul>
-      </div>
+      <h5 class="aside-Titles">Academic Services</h5>
+      <ul>
+        <li class="aside-Options"><a href="academic-dashboard.html">Academic Dashboard</a></li>
+        <li class="aside-Options"><a href="currentschedule.html">Current Schedule</a></li>
+        <li class="aside-Options"><a href="grades-reporting.html">Grades &amp; Reporting</a></li>
+        <li class="aside-Options"><a href="upcomingcourses.html">Upcoming Courses</a></li>
+      </ul>
+      <h5 class="aside-Titles">College Information</h5>
+      <ul>
+        <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Home.jnz?portlet=Events_Calendar&screen=MainView&screenType=change">College Calendar</a></li>
+        <li class="aside-Options"><a href="https://stevenscollege.edu/financialaid/">Financial Aid</a></li>
+        <li class="aside-Options"><a href="https://my.stevenscollege.edu/ICS/Students/">Student Services</a></li>
+      </ul>
+    </div>
     </section>
 
     <div class="upcoming-Courses">
